[package]
name = "tilemap_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7"
serde = {version = "1", features = ["derive"] }
iced = {version = "0.4.2", features =["pure", "tokio"] }
rfd = "0.10.0"
aseprite = "0.1.3"
